# ai-garage-template

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  memory.json  pyproject.toml  requirements.txt  setup_venv.ps1
docs/: agents.md  config.md  llm.md  logger.md  memory.md  prompt.md  utils.md
factory/: README.md
factory/agents/ai_projects/: base_agent.py  generic_agent.py
factory/config/: app_config.py  secret_config.py
factory/llm/: client_helper.py  factory.py  llm_model_config.py
factory/llm/providers/: azure_ai_project_provider.py  azure_inference_provider.py  base_provider.py  openai_provider.py
factory/memory/: base_provider.py  factory.py
factory/memory/providers/: cosmos_provider.py  json_provider.py
factory/prompt/: example_prompt.jinja2  manager.py  sample_prompt.prompty
factory/tools/: generic_tools.py
factory/tools/bq/: tool.py
factory/utils/: clients.py
src/: README.md
src/examples/: README.md
src/examples/inference/: identification_agent.py  orchestrate.py  prioritization_agent.py
src/examples/projects/: qna_agent.py
src/factory/: README.md
src/factory/config/: app_config.py  constants.py  secret_config.py
src/factory/llm/: __main__.py  base_provider.py  client_helper.py  factory.py  llm_model_config.py
src/factory/logger/: enums.py  telemetry.py
src/factory/memory/: factory.py
src/factory/prompt/: __main__.py  advanced_example.py  example_usage.py  manager.py  prompt.py  prompty_example.py
src/hazard_agent/: identification_agent.py  orchestrate.py  prioritization_agent.py  schemas.py  tools.py
(+16 files in other folders)
